# single

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO  dataStructure.md  datasetInfo.json  order.sh  readline.py  redditloading.ipynb  test.ipynb  test.py  图采样需求.md
apitest/dgl/: neg_sample.py
apitest/signn/: neg_sample.py  testing.py
config/: PD_dgl.json  change.sh  configChange.py  modify.py
datagen/: dataGen.cpp  dataTest.ipynb  datagen.ipynb  papers100M.py  products.py  reddit.py  tw2010.sh  uk-2007.sh
docker/: .condarc  autoDelete.sh  autorun.sh  restartCLuster.sh  spec-list.txt
scripts/: README  baseline.sh  baseline_log.txt  gat-baseline.sh  gcn-baseline.sh  graphsage-baseline.sh  mem_monitor.sh  memory_usage.txt  run_log.txt  self_baseline.sh  sgnn_log.txt  sgnn_run_test.sh  sgnn_run_train.sh
spec/: CMakeLists.txt  binread.ipynb  build.sh  main.cpp  readGraph.cpp  readGraph.h
spec/S5P/: CMakeLists.txt  ClusterGameTask.cpp  ClusterGameTask.h  ClusterPackGame.cpp  ClusterPackGame.h  Partitioner.cpp  Partitioner.h  StreamCluster.cpp  StreamCluster.h  globalConfig.cpp  globalConfig.h  graph.cpp  graph.h  main.cpp  project.properties  readGraph.cpp  readGraph.h  rebuild.sh
src/datagen/: COM_FR.sh  cunstom.py  dataGen.cpp  gendgldata.py  genfakedata.ipynb  papers100M.py  products.py  reddit.py  test.ipynb  tw2010.sh  uk-2006.sh  uk-2007.sh
src/datapart/: featMerge.py  partition.ipynb  test1.ipynb  test2.ipynb
src/device_sensor/: README.md  program_name  tesing1.cpp  testing.cpp
src/hashmapping/: cuda_hashtable.cu  cuda_hashtable.cuh  cuda_mapping.cu  main.cpp  setup.py
src/load/: bandTesting.py  config.json  dglBlock.py  error_pre_loading.py  gat.json  graph_loading.py  graphsage.json  loader copy 3.py  loader.py  loaderDataTest.py  loaderTimeTest.py  loader_dgl.py  mem_loader.py  mydataloader.py  pre_loading.py  readBin.py  right_loader.py  right_loadexx.py  test.py  test.sh  test_loader.py  tmp.py  tools.py
src/merge/: mmap_feat_buffer.py
src/partition/: CMakeLists.txt  Makefile  bloomfilter.cpp  bloomfilter.h  dataAdapter.py  dataAdapterTest.ipynb  dataRefactor.py  dataconvert.cpp  fennel.cpp  fennel_result_test.cpp  fennel_test.cpp  getEdges.cpp  main.cpp  map_test.cpp  ogb-products-bloomfilter  openmptest.cpp  readGraph.cpp  test.py  unorder_map_test.cpp
src/partition/S5P/: CMakeLists.txt  ClusterGameTask.cpp  ClusterGameTask.h  ClusterPackGame.cpp  ClusterPackGame.h  Partitioner.cpp  Partitioner.h  StreamCluster.cpp  StreamCluster.h  cm_sketch.cpp  common.h  globalConfig.cpp  main.cpp  project.properties  readGraph.cpp  readGraph.h  rebuild.sh  threadpool.h
src/partition/convert/: CMakeLists.txt  main.cpp  readGraph.cpp  readGraph.h  rebuild.sh  test.ipynb
src/partition/gnn/: dataAdapter.py  dataAdapterTest.ipynb  dataTest.ipynb  ogb-products-bloomfilter.cpp
src/partition/include/: bloomfilter.h  graph.h  readGraph.h
src/pipeline/: lock.py  queue.py
src/predata/: convert2coo.py  convert2txt.sh  coo2csr  coo2csrbin.cpp  coo2edge  coo2edgebin.cpp  dataProcess.ipynb  fadeDataGen.py  faseDataGen.ipynb  feat2bin.py  graph2bin.py  graph2bin1.py  graph2bin2.py  graph2bin3.py  ids2bin.py  label2bin.py  part_run.sh  part_train.py  partgraph.py  readBin.cpp  test.cpp  test.ipynb  trainid2bin.py
src/sample/: install.sh
src/signn/: README.md  common.cuh  common.h  cuda_hashtable.cu  cuda_hashtable.cuh  install.sh  (+13 more)
temp/: errorCheck.ipynb  integrity_test.py
test/: copydata.py
tools/: mem_monitor.py  run.sh
utils/: run.sh
(+191 files in other folders)
